--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.3.2",
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewired": "^1.5.2",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.2.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "three": "^0.92.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
